# flappy-cat

./: .gitignore  CMakeLists.txt  README.md
app/: build.gradle  proguard-rules.pro
app/src/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: flappycatlogo.psd
app/src/main/jni/: .clang-format  AndroidApplication.cpp  AndroidApplication.h  AndroidCircleShape.cpp  AndroidCircleShape.h  AndroidClock.h  AndroidColor.cpp  AndroidColor.h  AndroidConfiguration.cpp  AndroidConfiguration.h  AndroidEvent.cpp  AndroidEvent.h  AndroidEventData.h  AndroidLooper.cpp  AndroidLooper.h  AndroidPipe.cpp  AndroidPipe.h  AndroidPosition.cpp  AndroidPosition.h  AndroidRectangleShape.cpp  AndroidRectangleShape.h  AndroidShape.cpp  AndroidShape.h  AndroidVector.cpp  AndroidVector.h  AndroidVertex.cpp  AndroidVertex.h  AndroidVertices.cpp  AndroidVertices.h  AndroidWindow.cpp  AndroidWindow.h  CMakeLists.txt  FlappyCatApplication.cpp  FlappyCatApplication.h  FlappyCatChain.h  FlappyCatClock.h  FlappyCatCloud.cpp  FlappyCatCloud.h  FlappyCatColorScheme.cpp  FlappyCatColorScheme.h  (+22 more)
app/src/main/jni/android/: AndroidApplication.cpp  AndroidApplication.h  AndroidApplication.hpp  AndroidConfiguration.cpp  AndroidConfiguration.hpp  AndroidEvent.cpp  AndroidEvent.h  AndroidEvent.hpp  AndroidEventData.h  AndroidEventData.hpp  AndroidLog.h  AndroidLog.hpp  AndroidLooper.cpp  AndroidLooper.h  AndroidLooper.hpp  AndroidPipe.cpp  AndroidPipe.h  AndroidWindow.cpp  AndroidWindow.h  AndroidWindow.hpp  FlappyCatApplication.cpp  FlappyCatApplication.hpp  main.cpp
app/src/main/jni/core/: Clock.h  Color.cpp  Color.h  Event.h  Geometry.cpp  Geometry.h  HslColor.cpp  HslColor.h  Log.h  Position.cpp  Position.h  Render.cpp  Render.h  Shape.cpp  Shape.h  Signal.cpp  Signal.h  Transform.cpp  Transform.h  Transformation.cpp  Transformation.h  Vertex.cpp  Vertex.h  Vertices.cpp  Vertices.h  View.cpp  View.h  Window.cpp  Window.h
app/src/main/jni/engine/android/: AndroidApplication.cpp  AndroidApplication.h  AndroidConfiguration.cpp  AndroidEvent.cpp  AndroidEvent.h  AndroidEventData.h  AndroidLog.h  AndroidLooper.cpp  AndroidLooper.h  AndroidWindow.cpp  AndroidWindow.h
app/src/main/jni/engine/core/: Clock.hpp  Color.cpp  Color.h  Color.hpp  Event.h  Event.hpp  Geometry.cpp  Geometry.h  Geometry.hpp  HslColor.cpp  HslColor.h  HslColor.hpp  Log.cpp  Log.h  Log.hpp  Position.cpp  Position.h  Position.hpp  Render.cpp  Render.h  Render.hpp  RenderContext.hpp  Services.cpp  Services.hpp  Shape.cpp  Shape.h  Shape.hpp  Signal.cpp  Signal.h  Signal.hpp  Transformation.cpp  Transformation.h  Transformation.hpp  Type.h  TypeIndex.hpp  Vertex.cpp  Vertex.hpp  Vertices.cpp  Vertices.h  Vertices.hpp  (+6 more)
app/src/main/jni/engine/math/: geometric.cpp  geometric.hpp  mat3.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp
app/src/main/jni/engine/physics/: Collide.cpp  Collide.h  Collide.hpp  PhysicsBody.cpp  PhysicsBody.hpp  VectorMath.cpp  VectorMath.h  VectorMath.hpp
app/src/main/jni/engine/prototype/: CircleGeometry.cpp  CircleGeometry.h  CircleGeometry.hpp  CircleShape.cpp  CircleShape.h  CircleShape.hpp  FlatTransformation.cpp  FlatTransformation.h  FlatTransformation.hpp  RectangleGeometry.cpp  RectangleGeometry.hpp  RectangleShape.cpp  RectangleShape.h  RectangleShape.hpp  ShapeConstructor.hpp  TriangleGeometry.cpp  TriangleGeometry.h  TriangleGeometry.hpp  TriangleShape.cpp  TriangleShape.h  TriangleShape.hpp  VertexBasedRender.cpp  VertexBasedRender.h  VertexBasedRender.hpp
app/src/main/jni/engine/style/: Guidelines.hpp
app/src/main/jni/game/: FlappyCatApplication.cpp  FlappyCatApplication.h  FlappyCatClock.h  FlappyCatClock.hpp  FlappyCatColorScheme.cpp  FlappyCatColorScheme.h  FlappyCatColorScheme.hpp  FlappyCatGame.cpp  FlappyCatGame.h  FlappyCatGame.hpp  FlappyCatGameConstants.cpp  FlappyCatGameConstants.h  FlappyCatGameConstants.hpp
app/src/main/jni/game/entity/: FlappyCatBackground.cpp  FlappyCatBackground.h  FlappyCatBackground.hpp  FlappyCatChain.h  FlappyCatChain.hpp  FlappyCatCloud.cpp  FlappyCatCloud.h  FlappyCatCloud.hpp  FlappyCatEntity.cpp  FlappyCatEntity.h  FlappyCatEntity.hpp  FlappyCatFloor.cpp  FlappyCatFloor.h  FlappyCatFloor.hpp  FlappyCatHero.cpp  FlappyCatHero.h  FlappyCatHero.hpp  FlappyCatMascot.cpp  FlappyCatMascot.h  FlappyCatMascot.hpp  FlappyCatNode.cpp  FlappyCatNode.h  FlappyCatNode.hpp  FlappyCatSpike.cpp  FlappyCatSpike.h  FlappyCatSpike.hpp  FlappyCatStateNode.cpp  FlappyCatStateNode.h  FlappyCatStateNode.hpp  FlappyCatText.cpp  FlappyCatText.h  FlappyCatText.hpp  FlappyCatTextCharacter.cpp  FlappyCatTextCharacter.h  FlappyCatTextCharacter.hpp  FlappyCatViewLimit.cpp  FlappyCatViewLimit.h  FlappyCatViewLimit.hpp  FlappyCatWall.cpp  FlappyCatWall.h  (+1 more)
app/src/main/jni/game/style/: Guidelines.hpp
app/src/main/jni/physics/: Collide.cpp  Collide.h  VectorMath.cpp  VectorMath.h
app/src/main/jni/prototype/: CircleGeometry.cpp  CircleGeometry.h  CircleShape.cpp  CircleShape.h  FlatTransform.cpp  FlatTransform.h  FlatTransformation.cpp  FlatTransformation.h  RectangleGeometry.cpp  RectangleGeometry.h  RectangleShape.cpp  RectangleShape.h  TriangleGeometry.cpp  TriangleGeometry.h  TriangleShape.cpp  TriangleShape.h  VertexBasedRender.cpp  VertexBasedRender.h
app/src/main/jni/qt/: QtEvent.cpp  QtEvent.hpp  QtEventData.hpp  QtLog.hpp  QtOpenGLRender.cpp  QtOpenGLRender.h  QtOpenGLRender.hpp  QtWindow.cpp  QtWindow.hpp  main.cpp
app/src/main/jni/style/: BackportCpp17.h  FixNdk.h  Guidelines.h
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
qt/: QtEvent.cpp  QtEvent.h  QtEventData.h  QtLog.hpp  QtOpenGLRender.cpp  QtWindow.cpp  QtWindow.h  QtWindow.hpp  flappycat.pro  main.cpp
